#==============================================================================
# Unit Tests
#==============================================================================

# Phase 1 Unit Tests - TODO: Create test files
# add_executable(test_phase1
#     test_step_reader.cpp
#     test_geometry_healer.cpp
#     test_fag_builder.cpp
#     test_base_face_identifier.cpp
#     test_bend_classifier.cpp
#     test_surface_analyzer.cpp
#     test_edge_analyzer.cpp
#     test_angle_calculator.cpp
# )
#
# target_link_libraries(test_phase1 PRIVATE
#     openpanelcam_phase1
#     Catch2::Catch2WithMain
# )
#
# catch_discover_tests(test_phase1)

# Core Unit Tests - TODO: Create test files
# add_executable(test_core
#     test_geometry_utils.cpp
#     test_logger.cpp
# )
#
# target_link_libraries(test_core PRIVATE
#     openpanelcam_core
#     Catch2::Catch2WithMain
# )
#
# catch_discover_tests(test_core)
